@@ -4,6 +4,12 @@
 <body>
 
 <p>
+<strong>31 March 2008:</strong>
+Release 0.98 is now available at the
+<a href="http://sourceforge.net/project/showfiles.php?group_id=30337">download page</a>.
+</p>
+
+<p>
 <strong>12 December 2007:</strong>
 Checkpoint release 0.97.0d20071212 is now available at the
 <a href="http://sourceforge.net/project/showfiles.php?group_id=30337">download page</a>.
