@@ -24,36 +24,36 @@
   </p>
   <table>
     <tr>
-      <td COLSPAN="4"> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED">All Open Issues</a> </td>
+      <td COLSPAN="4"> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED&issue_status=UNCONFIRMED">All Open Issues</a> </td>
     </tr>
     <tr>
       <td> <ul> <li> Bug Reports: </li> </ul> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=scons">All</a> </td>
-      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED">Open</a> </td>
+      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED&issue_status=UNCONFIRMED">Open</a> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=DEFECT&component=scons&issue_status=RESOLVED&issue_status=VERIFIED&issue_status=CLOSED">Non-Open</a> </td>
     </tr>
     <tr>
       <td> <ul> <li>Enhancement: </li> </ul> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=ENHANCEMENT&component=scons">All</a> </td>
-      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=ENHANCEMENT&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED">Open</a> </td>
+      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=ENHANCEMENT&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED&issue_status=UNCONFIRMED">Open</a> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=ENHANCEMENT&component=scons&issue_status=RESOLVED&issue_status=VERIFIED&issue_status=CLOSED">Non-Open</a> </td>
     </tr>
     <tr>
       <td> <ul> <li>Feature Requests: </li> </ul> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=FEATURE&component=scons">All</a> </td>
-      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=FEATURE&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED">Open</a> </td>
+      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=FEATURE&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED&issue_status=UNCONFIRMED">Open</a> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=FEATURE&component=scons&issue_status=RESOLVED&issue_status=VERIFIED&issue_status=CLOSED">Non-Open</a> </td>
     </tr>
     <tr>
       <td> <ul> <li> Patches: </li> </ul> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=PATCH&component=scons">All</a> </td>
-      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=PATCH&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED">Open</a> </td>
+      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=PATCH&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED&issue_status=UNCONFIRMED">Open</a> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=PATCH&component=scons&issue_status=RESOLVED&issue_status=VERIFIED&issue_status=CLOSED">Non-Open</a> </td>
     </tr>
     <tr>
       <td> <ul> <li> Tasks: </li> </ul> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=TASK&component=scons">All</a> </td>
-      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=TASK&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED">Open</a> </td>
+      <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=TASK&component=scons&issue_status=NEW&issue_status=STARTED&issue_status=REOPENED&issue_status=UNCONFIRMED">Open</a> </td>
       <td> <a href="http://scons.tigris.org/issues/buglist.cgi?Submit+query=Submit+query&issue_type=TASK&component=scons&issue_status=RESOLVED&issue_status=VERIFIED&issue_status=CLOSED">Non-Open</a> </td>
     </tr>
   </table>
