@@ -13,12 +13,12 @@
 <h2>Current Releases</h2>
 
 <p>
-The current stable release is 0.97, released 17 May 2007.
+The current stable release is 0.98, released 31 March 2008.
 </p>
 
 <p>
-The latest release is 0.97.0d20071212,
-released 12 December 2007.
+The latest release is 0.98,
+released 31 March 2008.
 </p>
 
 <h2>Upcoming Releases</h2>
@@ -34,16 +34,6 @@ that team has hammered out a release schedule.
 <th>
 Goals
 </th>
-</tr>
-<tr>
-<td>0.97</td>
-<td>???</td>
-<td>
-Wider release and more extensive field testing before
-declaring the "Big Signature Refactoring"
-ready to be blessed as the official 1.0 release.
-Additional features and bug fixes.
-</td>
 </tr>
 <tr>
 <td>1.0</td>
